# drift-happens-rules-of-ml-demo

./: .gitignore  README.md  drift_happens_demo.ipynb  main.py  pyproject.toml
