[project]
name = "drift-happens-rules-of-ml-demo"
version = "0.1.0"
description = "Tiny, presentation-ready ML demo inspired by Google's Rules of ML"
authors = [{ name = "Stefano Caiafa" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
	"numpy",
	"scikit-learn",
]

[project.scripts]
drift-happens = "main:main"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
