[project]
name = "drift-happens-rules-of-ml-demo"
version = "0.1.0"
description = "Tiny ML demo: baseline vs complex model and data drift impact"
authors = [{ name = "Stefano Caiafa" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
	"numpy>=1.26,<3.0",
	"scikit-learn>=1.4,<2.0",
	"matplotlib>=3.8,<4.0",
	"ipykernel>=6.29,<7.0",
]

[project.scripts]
drift-happens = "main:main"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
